test_cases/negative/parser/unterminted_string.snek
export foo = Image("rust:latest);
